parser/y.output

state 0
	$accept: .start $end 
	program: .    (2)

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  reduce 2 (src line 119)

	start  goto 1
	program  goto 2
	expression  goto 4
	applicable_expression  goto 11
	expression_lines  goto 3
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  program.    (1)

	.  reduce 1 (src line 114)


state 3
	program:  expression_lines.    (3)
	expression_lines:  expression_lines.expression END 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  reduce 3 (src line 123)

	expression  goto 33
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 4
	expression_lines:  expression.END 
	binary_expression:  expression.'+' expression 
	binary_expression:  expression.'-' expression 
	binary_expression:  expression.'*' expression 
	binary_expression:  expression.'/' expression 
	binary_expression:  expression.'=' expression 
	binary_expression:  expression.'>' expression 
	binary_expression:  expression.'<' expression 
	binary_expression:  expression.AND expression 
	binary_expression:  expression.OR expression 

	END  shift 34
	'='  shift 39
	'<'  shift 41
	'>'  shift 40
	AND  shift 42
	OR  shift 43
	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	.  error


state 5
	expression:  TRUE.    (4)

	.  reduce 4 (src line 125)


state 6
	expression:  FALSE.    (5)

	.  reduce 5 (src line 127)


state 7
	expression:  STRING.    (6)

	.  reduce 6 (src line 128)


state 8
	expression:  FLOAT.    (7)

	.  reduce 7 (src line 129)


state 9
	expression:  binary_expression.    (8)

	.  reduce 8 (src line 130)


state 10
	expression:  unary_expression.    (9)

	.  reduce 9 (src line 131)


state 11
	expression:  applicable_expression.    (10)
	function_application:  applicable_expression.'(' application_arguments ')' 
	key_access:  applicable_expression.'.' IDENT 
	key_access:  applicable_expression.'[' expression ']' 

	'('  shift 44
	'['  shift 46
	'.'  shift 45
	.  reduce 10 (src line 132)


state 12
	expression:  do_expression.    (11)

	.  reduce 11 (src line 133)


state 13
	expression:  if_expression.    (12)

	.  reduce 12 (src line 134)


state 14
	expression:  case_expression.    (13)

	.  reduce 13 (src line 135)


state 15
	unary_expression:  '-'.expression 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 47
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 16
	unary_expression:  '+'.expression 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 48
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 17
	unary_expression:  '!'.expression 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 49
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 18
	applicable_expression:  SYMBOL.    (14)

	.  reduce 14 (src line 137)


state 19
	applicable_expression:  INTEGER.    (15)

	.  reduce 15 (src line 139)


state 20
	applicable_expression:  ident.    (16)

	.  reduce 16 (src line 140)


state 21
	applicable_expression:  vector_literal.    (17)

	.  reduce 17 (src line 141)


state 22
	applicable_expression:  map_literal.    (18)

	.  reduce 18 (src line 142)


state 23
	applicable_expression:  function_application.    (19)

	.  reduce 19 (src line 143)


state 24
	applicable_expression:  key_access.    (20)

	.  reduce 20 (src line 144)


state 25
	applicable_expression:  '('.expression ')' 
	ident:  '('.'+' ')' 
	ident:  '('.'-' ')' 
	ident:  '('.'*' ')' 
	ident:  '('.'/' ')' 
	ident:  '('.'>' ')' 
	ident:  '('.'<' ')' 
	ident:  '('.'!' ')' 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'<'  shift 56
	'>'  shift 55
	'!'  shift 57
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'/'  shift 54
	.  error

	expression  goto 50
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 26
	do_expression:  KW_DO.expression_lines END 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 4
	applicable_expression  goto 11
	expression_lines  goto 58
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 27
	if_expression:  if_guard.then_condition 
	if_expression:  if_guard.then_condition else_condition 

	KW_THEN  shift 60
	.  error

	then_condition  goto 59

state 28
	case_expression:  KW_CASE.expression KW_OF case_lines END 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 61
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 29
	ident:  IDENT.    (22)

	.  reduce 22 (src line 147)


state 30
	vector_literal:  '['.']' 
	vector_literal:  '['.arguments ']' 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	']'  shift 62
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	'*'  shift 67
	.  error

	expression  goto 65
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	argument  goto 64
	splat_argument  goto 66
	arguments  goto 63
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 31
	map_literal:  '{'.'}' 
	map_literal:  '{'.associative_arguments '}' 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'}'  shift 68
	'('  shift 25
	'['  shift 30
	'.'  shift 73
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	'*'  shift 67
	.  error

	expression  goto 72
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	splat_argument  goto 71
	associative_arguments  goto 69
	pair  goto 70
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 32
	if_guard:  KW_IF.expression 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 74
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 33
	expression_lines:  expression_lines expression.END 
	binary_expression:  expression.'+' expression 
	binary_expression:  expression.'-' expression 
	binary_expression:  expression.'*' expression 
	binary_expression:  expression.'/' expression 
	binary_expression:  expression.'=' expression 
	binary_expression:  expression.'>' expression 
	binary_expression:  expression.'<' expression 
	binary_expression:  expression.AND expression 
	binary_expression:  expression.OR expression 

	END  shift 75
	'='  shift 39
	'<'  shift 41
	'>'  shift 40
	AND  shift 42
	OR  shift 43
	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	.  error


state 34
	expression_lines:  expression END.    (30)

	.  reduce 30 (src line 157)


state 35
	binary_expression:  expression '+'.expression 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 76
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 36
	binary_expression:  expression '-'.expression 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 77
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 37
	binary_expression:  expression '*'.expression 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 78
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 38
	binary_expression:  expression '/'.expression 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 79
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 39
	binary_expression:  expression '='.expression 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 80
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 40
	binary_expression:  expression '>'.expression 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 81
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 41
	binary_expression:  expression '<'.expression 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 82
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 42
	binary_expression:  expression AND.expression 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 83
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 43
	binary_expression:  expression OR.expression 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 84
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 44
	function_application:  applicable_expression '('.application_arguments ')' 
	application_arguments: .    (62)

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	'*'  shift 67
	.  reduce 62 (src line 305)

	expression  goto 65
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	argument  goto 64
	splat_argument  goto 66
	arguments  goto 86
	application_arguments  goto 85
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 45
	key_access:  applicable_expression '.'.IDENT 

	IDENT  shift 87
	.  error


state 46
	key_access:  applicable_expression '['.expression ']' 

	IDENT  shift 29
	INTEGER  shift 19
	TRUE  shift 5
	FALSE  shift 6
	FLOAT  shift 8
	SYMBOL  shift 18
	STRING  shift 7
	KW_DO  shift 26
	KW_CASE  shift 28
	KW_IF  shift 32
	'{'  shift 31
	'('  shift 25
	'['  shift 30
	'!'  shift 17
	'+'  shift 16
	'-'  shift 15
	.  error

	expression  goto 88
	applicable_expression  goto 11
	do_expression  goto 12
	ident  goto 20
	binary_expression  goto 9
	unary_expression  goto 10
	vector_literal  goto 21
	map_literal  goto 22
	function_application  goto 23
	key_access  goto 24
	if_expression  goto 13
	if_guard  goto 27
	case_expression  goto 14

state 47
	binary_expression:  expression.'+' expression 
	binary_expression:  expression.'-' expression 
	binary_expression:  expression.'*' expression 
	binary_expression:  expression.'/' expression 
	binary_expression:  expression.'=' expression 
	binary_expression:  expression.'>' expression 
	binary_expression:  expression.'<' expression 
	binary_expression:  expression.AND expression 
	binary_expression:  expression.OR expression 
	unary_expression:  '-' expression.    (42)

	.  reduce 42 (src line 209)

